feat: store user encrypted password

--- a/.env.yaml
+++ b/.env.yaml
@@ -6,3 +6,7 @@ database:
   port: 5432
   password: PostgresQL
   user: postgres
+crypto:
+  algorithm: aes-256-cbc
+  secret_key: iamhappy
+  secret_iv: areyouhappytoo?
